* 2007-09-04 - thorben.betten@open-xchange.com

 - Bugfix #8470: Applied provided patch

* 2007-09-04 - ben.pahne@open-xchange.com
 
  - Fixed Bug 9204: Participant Notifications emails about tasks now sport
     the default DateFormat (not DateTimeFormat) for the users locale without
     timezone information.
 
* 2007-09-03 - ben.pahne@open-xchange.com
 
  - Fixed Bug 9154: Movings contacts not working
 
* 2007-08-30 - marcus.klein@open-xchange.com

 - Bugfix #7276: Fixed handling for task loading to not miss permission checks.

* 2007-08-31 - thorben.betten@open-xchange.com

 - Bugfix #7862/#9125: Adding library with additional charsets to Java VM
   to solve encoding problems with messages which uses java-foreign charset
   encodings
 - Bugfix #9169: Sorting messages by date fields (either sent date or
   received date) is no more mixed up with ascending/descending order
 - Bugfix #9161: Proper htm2text conversion
 - Bugfix #8699: JMX connector and its rmi data socket get now bound to the
   same address (if configured through server.properties' attribute
   "MonitorJMXBindAddress")

* 2007-08-30 - francisco.laguna@open-xchange.com

 - Bugfix #9159: explicitely initializing infostore document metadat
   with filesize 0 for mail attachments.

* 2007-08-30 - thorben.betten@open-xchange.com

 - Bugfix #7658: Fixed i18n call for read acknowledge text
 - Bugfix #9084: Fixed naming for folders
 - Bugfix #9163: Occuring blockquote tags in html content are no more
   colorized

* 2007-08-30 - marcus.klein@open-xchange.com

 - Bugfix #9135: Fixed NullPointerException due to coding problem.

* 2007-08-28 - francisco.laguna@open-xchange.com

 - Fixed Bug #9109, Support for DropBox scenario via WebDAV. A DropBox
   is a folder in which some user may only create objects
   (not read, update or delete). This works also via WebDAV Infostore now.
 - Contacts expect a display name so changed CSV Importer to supply one
   as needed.

* 2007-08-28 - ben.pahne@open-xchange.com
